# ankrag

./: .env.example  .gitignore  main.py  pyproject.toml
ankrag/: __init__.py  cli.py  config.py
ankrag/api/: __init__.py  main.py
ankrag/embeddings/: __init__.py  embed.py  text.py  vector_export.py
ankrag/eval/: __init__.py  metrics.py  run_eval.py
ankrag/extract/: __init__.py  batch_job.py  batch_jsonl.py  bq_sink.py  parse_results.py  pipeline.py  prompts.py  schema.py
ankrag/ingest/: __init__.py  bq.py  gcs.py  gl_oracle.py
ankrag/rag/: __init__.py  confidence.py  context.py  models.py  retrieve.py  suggest.py
frontend/src/: types.ts
frontend/src/components/: DashboardView.tsx  KnowledgeView.tsx  ReviewModal.tsx
scripts/: bq_join_key_transform.py  enable_gcp_apis.sh  workload_identity_cloud_run.sh
sql/bigquery/: gl_load_schema.json  schema.sql
